--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -2,13 +2,21 @@ input_dir: iOS_Rasid/Resources/Assets
 output_dir: iOS_Rasid/Resources/Assets
 
 
+colors:
+  - inputs: Colors/Colors.txt
+    outputs:
+        templateName: swift5
+        output: Colors/Colors.swift
+        params:
+            enumName: Colors
+
 xcassets:
   - inputs: Images
     outputs:
         templateName: swift5
         output: Images/Assets.swift
         params:
-            enumName: Assets
+            enumName: Images
       
 fonts:
   - inputs: Fonts/Cairo
