--- a/swiftgen.yml
+++ b/swiftgen.yml
@@ -25,4 +25,13 @@ fonts:
         output: Fonts/Fonts.swift
         params:
             enumName: Fonts
+         
+strings:
+  - inputs: Strings/en.lproj/Localizable.strings
+    outputs:
+        templateName: structured-swift4
+        output: Strings/Strings.swift
+        params:
+            enumName: Strings
+
             
